substrate/frame/support/test/tests/pallet_ui/pallet_doc_empty.stderr
error: The `pallet_doc` received an unsupported argument. Supported format: `pallet_doc("PATH")`
  --> tests/pallet_ui/pallet_doc_empty.rs:20:1
   |
20 | #[pallet_doc]
   | ^
